--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -93,6 +93,10 @@
   float: right;
 }
 
+.sub-box{
+  margin-bottom: 15px;
+}
+
 .certications .box1 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
   padding: 30px;
@@ -112,3 +116,5 @@
     width: 80%;
   }
 }
+
+
